--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>new year new me</title>
+
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 
 <body>
@@ -17,7 +19,7 @@
     </main>
 
     <footer>
-        
+
     </footer>
 
 </body>
