complete the banner section

--- a/index.html
+++ b/index.html
@@ -7,11 +7,31 @@
     <title>new year new me</title>
 
     <link rel="stylesheet" href="styles/index.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
     <header>
+        <div class="banner-container">
 
+            <div class="banner-content">
+                <h2 class="banner-title">
+                    All Thinks Are Possible If You believe
+                </h2>
+                <p class="banner-description">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words
+                </p>
+                <button class="banner-btn">
+                    Contact Us
+                </button>
+            </div>
+        </div>
     </header>
 
     <main>
