end of previous year

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 
+    <script src="https://kit.fontawesome.com/0b70f2ac17.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -35,7 +37,41 @@
     </header>
 
     <main>
+        <!-- My failures of pervious year -->
+        <section class="year-container">
+            <div class="year">
+                <img src="images/person.png" alt="" class="year-pic">
+                <div class="year-content">
+                    <h3 class="year-title">
+                        My failures of previous year
+                    </h3>
+                    <p class="year-description">
+                        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
+                        classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.
+                    </p>
+                    <div class="points-content">
+                        <div class="points">
+                            <i class="fa-solid fa-check"></i>
+                            <p>Contrary to popular belief, is not simply.</p>
+                        </div>
+                        <div class="points">
+                            <i class="fa-solid fa-check"></i>
+                            <p>Contrary to popular belief, is not simply.</p>
+                        </div>
+                        <div class="points">
+                            <i class="fa-solid fa-check"></i>
+                            <p>Contrary to popular belief, is not simply.</p>
+                        </div>
 
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <!-- end of previous year -->
+
+        <!-- My plans section -->
+        
     </main>
 
     <footer>
