start the My Plans section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
         <!-- end of previous year -->
 
         <!-- My plans section -->
-        
+        <section>
+            <h2 class="my-plans">My Plans</h2>
+        </section>
     </main>
 
     <footer>
