added the my plans and watch section

--- a/index.html
+++ b/index.html
@@ -71,8 +71,49 @@
         <!-- end of previous year -->
 
         <!-- My plans section -->
-        <section>
+        <section class="my-plans-container">
             <h2 class="my-plans">My Plans</h2>
+            <div class="start-content">
+
+                <div class="start">
+                    <img src="images/icons/web.png" alt="" class="start-img">
+                    <h4 class="start-title">Web Development</h4>
+                    <p class="start-starus">I want to start</p>
+                </div>
+
+                <div class="start">
+                    <img src="images/icons/js.png" alt="" class="start-img">
+                    <h4 class="start-title">Javascript</h4>
+                    <p class="start-starus">I want to learn</p>
+                </div>
+
+                <div class="start">
+                    <img src="images/icons/smoke.png" alt="" class="start-img">
+                    <h4 class="start-title">Smoking Habit</h4>
+                    <p class="start-starus">I want to end</p>
+                </div>
+
+                <div class="start">
+                    <img src="images/icons/ecom.png" alt="" class="start-img">
+                    <h4 class="start-title">ecommerce</h4>
+                    <p class="start-starus">I want to develop</p>
+                </div>
+            </div>
+        </section>
+        <!-- end of My plans section -->
+
+        <!-- hand watch -->
+        <section class="watch-container">
+            <img src="images/gradient1.png" alt="" class="watch">
+            
+            <div class="mindset">
+                <h3 class="mindset-title">
+                    Awlays keep a positive mindset
+                </h3>
+                <button class="mindset-btn">
+                    Call Now
+                </button>
+            </div>
         </section>
     </main>
 
